0.6.6.1 -------------------------------------------------------------------

Henning Rogge (2):
      Update version after release of v0.6.6
      Release v0.6.6.1

Manuel Munz (1):
      Fix jsoninfo again after a regression which was introduced with

0.6.6 -------------------------------------------------------------------

Bastian Bittorf (3):
      [hotfix] plugin: httpinfo: in case of an unrecoverable error ("could not
         initialize HTTP socket") exit for returnvalue != 0
      plugin: dot_draw: readme: make it clear, that it only opens an
         IPv4-socket, so a 'telnet ::1 2004' is not possible
      plugin: dot_draw: readme: replaced a b0rken link

Ferry Huberts (146):
      Update version after branch of v0.6.5
      gateway: store current gateway(s) in a struct
      gateway: lazily allocate the current gateway structs
      gateway: add path_cost to 'set gateway' interface
      gateway: add interface to get the gateway costs
      gateway: simplify by using the new costs interface
      gateway: add gateway_list.{c,h}
      gateway: keep track of the active gateways in a list
      Merge branch 'release-0.6.5'
      pud: java make target is dependent on library make target
      Merge branch 'release-0.6.5'
      Merge branch 'release-0.6.5'
      json_info: only output smart gateway info on Linux
      kernel_route: olsr_os_inetgw_tunnel_route can now take the table
      gateway: let the gateway code determine the tunnel name
      gateway: remove the worst gateway before adding new one
      gateway: add SmartGatewayUseCount configuration parameter
      gateway: use SmartGatewayUseCount setting the the gateway lists
      gateway: add SmartGatewayEgressInterfaces configuration parameter
      gateway: add SmartGatewayMarkOffset{Egress,Tunnels} configuration
         parameters
      gateway: add SmartGatewayPolicyRoutingScript configuration parameter
      gateway: initialise a set of fixed tunnel names in/for multi-gateway mode