@@ -1,3 +1,3 @@
 OLSRD_PLUGIN = true
 PLUGIN_NAME  = olsrd_pud
-PLUGIN_VER   = 1.1.0
+PLUGIN_VER   = 2.0.0
