@@ -19,17 +19,22 @@
  */
 
 /** The version of the wire format */
-#define PUD_WIRE_FORMAT_VERSION		2
+#define PUD_WIRE_FORMAT_VERSION		3
 
 /*
  * Flags
  */
 
-/** Flags that the GPS information contains the nodeId */
-#define PUD_FLAGS_ID				0x80
+/**
+ * Bitmask used in the GPS information present field to signal nodeId presence
+ */
+#define PUD_PRESENT_ID          0x80000000
 
-/** Flags that the GPS information is originating from a gateway */
-#define PUD_FLAGS_GATEWAY			0x40
+/**
+ * Bitmask used in the GPS information present field to signal that it's
+ * originating from a gateway
+ */
+#define PUD_PRESENT_GATEWAY     0x40000000
 
 /*
  * Time
@@ -298,12 +303,11 @@ typedef struct _NodeInfo {
 	unsigned char nodeId; /**< placeholder for variable length nodeId string */
 }__attribute__((__packed__)) NodeInfo;
 
-/** Complete format, 8+8+8+120+(8+variable) bits =  18+(1+variable) bytes*/
+/** Complete format, 8+8+32+120+(8+variable) bits =  21+(1+variable) bytes*/
 typedef struct _PudOlsrPositionUpdate {
 	uint8_t version; /**< the version of the sentence */
 	uint8_t validityTime; /**< the validity time of the sentence */
-	uint8_t smask; /**< mask signaling the contents of the sentence */
-	uint8_t flags; /**< mask signaling extra contents of the sentence */
+	uint32_t present; /**< mask signaling the contents of gpsInfo */
 	GpsInfo gpsInfo; /**< the GPS information (MANDATORY) */
 	NodeInfo nodeInfo; /**< placeholder for node information (OPTIONAL) */
 }__attribute__((__packed__)) PudOlsrPositionUpdate;
@@ -395,10 +399,8 @@ PudOlsrPositionUpdate * getOlsrMessagePayload(int ipVersion, union olsr_message 
  */
 uint8_t getPositionUpdateVersion(PudOlsrPositionUpdate * olsrGpsMessage);
 void setPositionUpdateVersion(PudOlsrPositionUpdate * olsrGpsMessage, uint8_t version);
-uint8_t getPositionUpdateSmask(PudOlsrPositionUpdate * olsrGpsMessage);
-void setPositionUpdateSmask(PudOlsrPositionUpdate * olsrGpsMessage, uint8_t smask);
-uint8_t getPositionUpdateFlags(PudOlsrPositionUpdate * olsrGpsMessage);
-void setPositionUpdateFlags(PudOlsrPositionUpdate * olsrGpsMessage, uint8_t flags);
+uint32_t getPositionUpdatePresent(PudOlsrPositionUpdate * olsrGpsMessage);
+void setPositionUpdatePresent(PudOlsrPositionUpdate * olsrGpsMessage, uint32_t present);
 
 /*
  * GpsInfo
