@@ -1,3 +1,9 @@
+Note: In this release the pud plugin was upgraded to version 2.0.0.
+      This is because of a breaking change in its wire format. If you have
+      deployed the pud plugin on your mesh then you should update all nodes
+      to the new pud plugin at the same time since there is no interoperability
+      between the old version and the new version.
+
 0.6.6.1 -------------------------------------------------------------------
 
 Henning Rogge (2):
